1.32 groovy-cps files with adjustments to be able to build